syntax = "proto3";

package archivedag.arudaz.protos;

option java_multiple_files = true;
option java_package = "info.skyblond.archivedag.arudaz.protos.info";

import "archivedag/arudaz/protos/common.proto";

service UserInfoService {
  rpc WhoAmI (Empty) returns (WhoAmIResponse);
}

message WhoAmIResponse {
  string username = 1;
  repeated string role = 2;
  repeated string owned_group = 3;
  repeated string joined_group = 4;
}
